--- a/tutorial_TeX/RB_PhyloComparative_Tutorial/refs.bib
+++ b/tutorial_TeX/RB_PhyloComparative_Tutorial/refs.bib
@@ -79,6 +79,20 @@
   Timestamp                = {2008.04.04}
 }
 
+@Article{Hohna2014a,
+  Title                    = {{Likelihood Inference of Non-Constant Diversification Rates with Incomplete Taxon Sampling}},
+  Author                   = {H{\"o}hna, Sebastian},
+  Journal                  = PONE,
+  Year                     = {2014},
+  Number                   = {1},
+  Pages                    = {e84184},
+  Volume                   = {9},
+
+  Owner                    = {hoehna},
+  Publisher                = {Public Library of Science},
+  Timestamp                = {2013.10.13}
+}
+
 @Article{Hohna2012,
   Title                    = {{Guided Tree Topology Proposals for Bayesian Phylogenetic Inference}},
   Author                   = {Sebastian H{\"o}hna and Alexei J. Drummond},
@@ -108,6 +122,21 @@
   Owner                    = {hoehna},
   Timestamp                = {2014.03.11},
   Url                      = {http://sysbio.oxfordjournals.org/content/63/5/753.abstract}
+}
+
+@Article{Hohna2011,
+  Title                    = {{Inferring speciation and extinction rates under different species sampling schemes}},
+  Author                   = {H{\"o}hna, Sebastian and Stadler, Tanja and Ronquist, Fredrik and Britton, Tom},
+  Journal                  = MBE,
+  Year                     = {2011},
+  Number                   = {9},
+  Pages                    = {2577--2589},
+  Volume                   = {28},
+
+  Abstract                 = {The birth-death process is widely used in phylogenetics to model speciation and extinction. Recent studies have shown that the inferred rates are sensitive to assumptions about the sampling probability of lineages. Here, we examine the effect of the method used to sample lineages. Whereas previous studies have assumed random sampling, we consider two extreme cases of biased sampling: ‚Äúdiversified sampling‚Äù, where tips are selected to maximize diversity, and ‚Äúcluster sampling‚Äù, where sample diversity is minimized. Diversified sampling appears to be standard practice, e.g., in analyses of higher taxa, while cluster sampling may occur under special circumstances, e.g., in studies of geographically defined floras or faunas. Using both simulations and analyses of empirical data, we show that inferred rates may be heavily biased if the sampling strategy is not modeled correctly. In particular, when a diversified sample is treated as if it were a random or complete sample, the extinction rate is severely underestimated, often close to 0. Such dramatic errors may lead to serious consequences, e.g. if estimated rates are used in assessing the vulnerability of threatened species to extinction. Using Bayesian model testing across 18 empirical data sets, we show that diversified sampling is commonly a better fit to the data than complete, random or cluster sampling. Inappropriate modeling of the sampling method may at least partly explain anomalous results that have previously been attributed to variation over time in birth and death rates.},
+  Eprint                   = {http://mbe.oxfordjournals.org/content/early/2011/04/10/molbev.msr095.full.pdf+html},
+  Owner                    = {hoehna},
+  Timestamp                = {2015.02.04}
 }
 
 @Book{Harvey1991,
