update bg_1 model description, much gentler

--- a/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_0_content.tex
+++ b/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_0_content.tex
@@ -9,19 +9,29 @@ Currently, this primarily covers range evolution models, where a species may occ
 Tutorials to model individual specimens' geographical locations (sometimes called phylogeographic models) are under development.
 
 \subsection*{\textbf{Outline}}
-\begin{tabular}{ll}
-{\bf I. Range evolution} & \\
-& a) Dispersal-Extinction-Cladogenesis \\
-& b) Model \\
-{\bf II. Advanced features} & \\
-& a) Epoch model \\
-& b) GIS layers \\
-& c) Ancestral range reconstructs \\
-{\bf III. Data augmented biogeography} & \\
-& a) BayArea \\
-& b) Model \\
-& c) Phylowood animation \\
-\end{tabular}
+
+%{\bf 1. Introduction}
+%{\bf 1. Range evolution}
+%
+%\quad a) Dispersal-Extinction-Cladogenesis
+%
+%\quad b) Setting up the model
+%
+%{\bf II. Advanced features (under development)}
+%
+%\quad a) Epoch model
+%
+%\quad b) GIS layers
+%
+%\quad c) Ancestral range estimation
+%
+%{\bf III. Data augmented biogeography}
+%
+%\quad a) Data augmentation, non-independent character evolution
+%
+%\quad b) Setting up the model
+%
+%\quad c) Phylowood animation
 
 %\noindent \\ \impmark These little arrows indicate lines containing key information to progress through the lab. The rest of the text gives context for why we're taking these steps or what to make of results.
 %
