--- a/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_1_content.tex
+++ b/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_1_content.tex
@@ -1,24 +1,26 @@
 \section{Dispersal-Extinction-Cladogenesis model}
 
-\subsection{Model and method}
+\subsection{Range characters}
 
-First, we define the range for taxon $i$ as the bit vector $X_i$, where $X_{i,j} = 1$ if the taxon is present in area $j$ and $X_{i,j} = 0$ if the taxon is absent.
-Each taxon range is a bit vector of length $N$ areas.
-For example, if taxon $B$ is present only in areas 2 and 3 out of $N=3$ areas, its range is represented as $X_B = (0,1,1)$, which is translated to the bit string $X_B=011$ for short.
-If we apply the labels A, B, and C to our three areas, this bit vector can also be represented as a set: $X_B=011$ is the same as $X_B = \{ B, C \}$, or $X_B=BC$ for short.
-The data matrix, $\textbf{X}$, is analogous to a multiple sequence alignment where each element in the data matrix reports a discrete value for a homologous character shared by all taxa at column $j$.
+These models will rely on presence-absence data, where a species is observed or not observed across multiple discrete areas.
+For example, say there are three areas: A, B, and C.
+Say a species is present in areas A and C, then its range equals AC, which can also be encoded into the length-3 bit vector, 101.
+Bit vectors may also be transformed into (decimal) integers, e.g. the binary number 101 equals the decimal number 5.
+Typically, decimal representation is not used in discussion, but it is useful to keep in mind when considering the total number of possible ranges for a species.
 
 \subsection{Modeling anagenic range evolution}
 
-Next, we need a model of anagenic range evolution.
+How might we model the dynamics of species range evolution?
+To begin, we'll focus on anagenesis, evolution that occurs between speciation events.
 Since we have discrete characters we'll use the continuous-time Markov chain, which allows us to compute transition probability of a character changing from $i$ to $j$ in time $t$ through matrix exponentiation
 \[
 \mathbf{P}_{i,j}(t) = \left[ \exp \left\lbrace \mathbf{Q}t \right\rbrace \right]_{i,j},
 \]
 where $\textbf{Q}$ is the instantaneous rate matrix defining the rates of change between all pairs of characters, and $\textbf{P}$ is the transition probability rate matrix.
-This technique of matrix exponentiation is powerful because it integrates over all possible scenarios of character transitions that could occur during $t$ so long as the chain begins in state $i$ and ends in state $j$. Remember, $i$ and $j$ represent different ranges, each of which is encoded as a set of occupied areas.
+Remember, $i$ and $j$ represent different ranges, each of which is encoded as the set of areas occupied by the species.
+Exponentiation of the rate matrix is powerful because it integrates over all possible scenarios of character transitions that could occur during $t$ so long as the chain begins in state $i$ and ends in state $j$.
 
-We can then encode range evolution events into the allowed character transitions of $\textbf{Q}$ and parameterize the events so that we may infer their relative importance to generating our observed ranges.
+We can then encode ${\bf Q}$ to reflect the allowable classes of range evolution events with biologically meaningful parameters.
 We'll take a simple model of range expansion (e.g. $BC \rightarrow ABC$) and range contraction (e.g. $BC \rightarrow C$).
 (Range expansion may also be referred to as dispersal or area gain and range contraction as extirpation or area loss.)
 The rates in the transition matrix for three areas might appear as
@@ -44,7 +46,7 @@ where $e = ( e_A, e_B, e_C )$ are the (local) extinction rates per area, and $d 
 
 Note the rate of more than one event occurring simultaneously is zero, so a range must expand twice by one area in order to expand by two areas.
 
-{\bf Q: What events might explain a transition from range $ABC$ to range $A$? From range $AB$ to range $C$?}
+{\bf Q: What series of events might explain a transition from range $ABC$ to range $A$? From range $AB$ to range $C$?}
 
 Of course, this model can be specified for more than three areas.
 
@@ -53,23 +55,26 @@ Of course, this model can be specified for more than three areas.
 Let's consider what happens to the size of \textbf{Q} when the number of areas, $N$, becomes large.
 For three areas, \textbf{Q} is size $8 \times 8$.
 For ten areas, \textbf{Q} is size $2^{10} \times 2^{10} = 1024 \times 1024$, which approaches the largest size matrices that can be exponentiated in a practical amount of time.
+For twenty areas, \textbf{Q} is size $2^{20} \times 2^{20} \approx 10^6 \times 10^6$, exponentiation is not viable.
 For biogeographic inference under large numbers of areas, see the Tutorial XXX \citep{landis13}.
 
 
 \subsection{Modeling cladogenic range evolution}
 
-In addition to dispersal and extinction, the DEC models cladogenic range evolution events.
+Cladogenesis describes evolutionary change coincident with speciation.
+In some well-studied cases, daughter species are not expected to inherit their ancestral range identically.
 For each internal node in the reconstructed tree, one of two cladogenic events can occur: sympatry or allopatry.
-Say the range of a species approaching an internal node, i.e. that is about to speciate, is $A$.
-Since the species range is size one, this always results in sympatry, where both daughter lineages inherit the ancestral species range, so both lineages begin in state $A$.
-The notation $A \rightarrow A \mid A$ describes this event: the state is $A$ before cladogenesis, the left daughter inherits range $A$ after cladogenesis, as does the right daughter.
+Say the range of a species is $A$ the moment before speciation occurs at an internal phylogenetic node.
+Since the species range is size one, both daughter lineages necessarily inherit the ancestral species range ($A$).
+In DEC parlance, this is called a narrow sympatry event.
 
 Now suppose the ancestral range is $ABC$.
-Under sympatric cladogenesis, one lineage identically inherits the ancestral species range, $ABC$, while the other lineage inherits only a single area, i.e. only $A$ or $B$ or $C$.
+Under subset sympatric cladogenesis, one lineage identically inherits the ancestral species range, $ABC$, while the other lineage inherits only a single area, i.e. only $A$ or $B$ or $C$.
+For widspread sympatric cladogenesis, both lineages inherit the ancestral range, $ABC$.
 
 Under allopatric cladogenesis, the ancestral range is split evenly among daughter lineages, e.g. one lineage may inherit $AB$ and the other inherits $C$.
 Both daughter lineages inherit the entire ancestral species range following widespread sympatric cladogenic events.
-For a general description of state transitions for cladogenic events, see \citet{matzke13}.
+For an excellent overview of described state transitions for cladogenic events, see \citet{matzke13}.
 
 {\bf Q: What are the 6 possible states in the daughter lineages after cladogenesis given the state is $AB$ before cladogenesis?}
 
